# sst-spatter

./: .gitignore  INSTALL.md  LICENSE.md  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: build.yml
config/: .gitignore  sst_check_spatter.m4
src/: Makefile.am  mirandaCPU.cc  mirandaMemMgr.h
src/generators/: spatterGenerator.cc  spatterGenerator.h
src/sst/elements/balar/tests/: cuda-test-legacy.py
src/sst/elements/ember/mpi/motifs/: emberdetailedring.cc  emberdetailedstream.cc
src/sst/elements/ember/run/configurations/: 3LevelModel.py  basicDetailedModel.py  sandyBridgeModel.py
src/sst/elements/ember/shmem/motifs/: emberShmemAtomicIncV2.h  emberShmemFAM_Get2.h  emberShmemFAM_Put.h
src/sst/elements/ember/test/: basicDetailedModel.py  detailedShmemModel.py
src/sst/elements/firefly/: nic.cc
src/sst/elements/memHierarchy/membackend/: goblinHMCBackend.cc
src/sst/elements/memHierarchy/tests/: genRefsOther.sh  goblinCustomCmd-2.py  miranda.cfg  testCustomCmdGoblin-1.py  testCustomCmdGoblin-2.py  testCustomCmdGoblin-3.py  testKingsley.py  testMemoryCache.py  testRangeCheck.py  utils.py
src/sst/elements/messier/tests/: gupsgen.py  gupsgen_2RANKS.py  gupsgen_fastNVM.py  stencil3dbench_messier.py  streambench_messier.py
src/sst/elements/miranda/: Makefile.am  mirandaCPU.cc  mirandaCPU.h
src/sst/elements/miranda/generators/: spatterbench.cc  spatterbench.h
src/sst/elements/miranda/tests/: genRefsSpatter.sh  miranda-spr.py  spatterbench.py  spatterbench_spr.py  testsuite_default_miranda_spatterbench.py
src/sst/elements/miranda/tests/refFiles/: test_miranda_spatterbench_gs.out  test_miranda_spatterbench_gs_stats.csv  test_miranda_spatterbench_multigather.out  test_miranda_spatterbench_scatter.out  test_miranda_spatterbench_scatter_stats.csv
src/sst/elements/rdmaNic/tests/: runVanadis.py
src/sst/elements/samba/tests/: gupsgen_mmu.py  gupsgen_mmu_4KB.py  gupsgen_mmu_opal.py  gupsgen_mmu_three_levels.py  simpletlb_test.py  stencil3dbench_mmu.py  streambench_mmu.py
src/sst/elements/shogun/tests/: basic_miranda.py  hierarchy_test.py  hierarchy_test_multi.py
src/sst/elements/sstSpatter/: Makefile.am  configure.m4  mirandaCPU.h  mirandaEvent.h  mirandaGenerator.h
src/sst/elements/sstSpatter/generators/: copygen.h  customcmd_opcode.h  gupsgen.cc  gupsgen.h  inorderstreambench.h  nullgen.h  randomgen.cc  randomgen.h  revsinglestream.cc  revsinglestream.h  singlestream.cc  singlestream.h  spatterGenerator.cc  spatterGenerator.h  spatterbench.cc  spatterbench.h  spmvgen.h  stake.cc  stake.h  stencil3dbench.cc  stencil3dbench.h  streambench.cc  streambench.h  streambench_customcmd.cc  streambench_customcmd.h
src/sst/elements/sstSpatter/tests/: copybench.py  goblin_singlestream1-trace-map.py  goblin_singlestream1-trace.py  goblin_singlestream1.py  goblin_singlestream2-trace.py  goblin_singlestream2.py  goblin_singlestream3-trace.py  goblin_singlestream3.py  goblin_streambench_customcmd.py  gupsgen.py  hbm_singlestream1-trace.py  hbm_singlestream1.py  inorderstream.py  randomgen.py  revsinglestream.py  singlestream.py  spatterbench.py  spatterbench_spr.py  spmvgen.py  stencil3dbench.py  streambench.py  test_subcomp.py  testsuite_default_sst_spatter.py
src/sst/elements/sstSpatter/tools/: spatter_stats.py
src/sst/elements/thornhill/: singleThread.cc
tests/: Makefile.am  genRefsSpatter.sh  sst_spatter.py  sst_spatter_spr.py  testsuite_default_sst_spatter.py
tests/refFiles/: test_sst_spatter_gather_stats.csv  test_sst_spatter_gs.out  test_sst_spatter_gs_stats.csv  test_sst_spatter_multigather.out  test_sst_spatter_multiscatter.out  test_sst_spatter_multiscatter_stats.csv  test_sst_spatter_scatter_stats.csv
tools/: spatter_stats.py
