# -*- Makefile -*-
#
#

EXTRA_DIST = \
	tests/testsuite_default_sst_spatter.py \
	tests/sst_spatter.py \
	tests/refFiles/test_miranda_gather.out \
	tests/refFiles/test_miranda_gather_stats.csv \
	tests/refFiles/test_miranda_gs.out \
	tests/refFiles/test_miranda_gs_stats.csv \
	tests/refFiles/test_miranda_multigather.out \
	tests/refFiles/test_miranda_multigather_stats.csv \
	tests/refFiles/test_miranda_multiscatter.out \
	tests/refFiles/test_miranda_multiscatter_stats.csv \
	tests/refFiles/test_miranda_scatter.out \
	tests/refFiles/test_miranda_scatter_stats.csv
